Fix failing DCHECK in AutoCompleteInput()

BUG=656209
R=pkasting@chromium.org
TEST=OmniboxViewTest.FocusSearchLongUrl

Review-Url: https://chromiumcodereview.appspot.com/2425703003
Cr-Commit-Position: refs/heads/master@{#426340}

Former-commit-id: 2d3f670692d05b5b8937d286a7abb8cb04bc53c4